feat(geometry): Introduce latitudeLongitudeToPoint mapping method
- Added a new method in AlertMapper and IncidentMapper to convert latitude and longitude to a Point object using GeometryFactory.
- Refactored AlertServiceImpl and IncidentServiceImpl to utilize the new mapping method for creating Point locations from latitude and longitude.
- Updated EventPublisher to use constants for WebSocket topics instead of hardcoded strings.
- Introduced WebSocketTopics class to centralize WebSocket topic constants.
- Removed unused GeometryFactory instances from service implementations.