@@ -1,9 +1,9 @@
 package com.acousticguard.hub.sensor.controller;
 
+import com.acousticguard.hub.sensor.mapper.SensorMapper;
 import com.acousticguard.hub.sensor.model.Sensor;
 import com.acousticguard.hub.sensor.service.SensorMonitorService;
 import com.acousticguard.hub.telemetry.dto.SensorNodeResponseDto;
-import com.acousticguard.hub.telemetry.service.TelemetryService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -11,7 +11,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * REST controller for sensor management.
@@ -23,7 +22,7 @@ import java.util.stream.Collectors;
 public class SensorController {
 
     private final SensorMonitorService sensorMonitorService;
-    private final TelemetryService telemetryService;
+    private final SensorMapper sensorMapper;
 
     /**
      * Gets all sensor nodes with their status.
@@ -33,22 +32,9 @@ public class SensorController {
     @GetMapping
     public ResponseEntity<List<SensorNodeResponseDto>> getAllNodes() {
         List<Sensor> sensors = sensorMonitorService.getAllSensors();
-
         List<SensorNodeResponseDto> nodes = sensors.stream()
-                .map(sensor -> new SensorNodeResponseDto(
-                        sensor.getId(),
-                        sensor.getLocation(),
-                        sensor.getStatus(),
-                        null, // latencyMs
-                        null, // uptimePercent
-                        sensor.getLastHeartbeat(),
-                        sensor.getLatitude(),
-                        sensor.getLongitude(),
-                        null, // firmwareVersion
-                        null  // metadata
-                ))
-                .collect(Collectors.toList());
-
+                .map(sensorMapper::toDto)
+                .toList();
         return ResponseEntity.ok(nodes);
     }
 }
